--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Root route</h1>
+<h4 class="ui center aligned medium icon header">
+  <i class="circular orange coffee icon"></i>
+  Say Something
+</h4>
 
+<div class="ui column grid">
+
+  <!-- CHAT AREA -->
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+
+      <!-- MESSAGES -->
+      <div class="content">
+        <div class="ui feed">
+          <%= render @messages %>
+        </div>
+      </div>
+
+      <!-- MESSAGE FORM -->
+      <div class="extra content">
+        <%= form_with(model: Message.new, class: "ui reply form", local: true) do |f| %>
+          <div class="field">
+            <div class="ui fluid icon input">
+              <%= f.text_field :body, placeholder: "Enter Message..." %>
+              <i class="bordered inverted orange edit icon"></i>
+            </div>
+          </div>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- SIDE MENU -->
+  <div class="four wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui inverted vertical menu">
+          <%= link_to "Home", root_path, class: "active item" %>
+          <%= link_to "Messages", "#", class: "item" %>
+          <%= link_to "Friends", "#", class: "item" %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
