App Functions and all Controllers acrtions are restricted

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,13 @@
 .chatbox {
     height: 450px;
 }
+
+.chatbox-messages {
+  height: 400px;        /* fixed height */
+  overflow-y: auto;     /* vertical scroll */
+  overflow-x: hidden;   /* prevent side overflow */
+}
+
+.chatbox-messages .event {
+  word-wrap: break-word;
+}
