--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -10,7 +10,7 @@
     <div class="ui fluid raised card chatbox">
 
       <!-- MESSAGES -->
-      <div class="content">
+      <div class="content chatbox-messages">
         <div class="ui feed">
           <%= render @messages %>
         </div>
